[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Weapeons/Melee Weapons/BeachBall/BeachBall_Red.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BeachBall.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="CircleShape2D" id=5]
radius = 5.66667

[sub_resource type="Animation" id=4]
resource_name = "Fade In"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BeachBall_Animation:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.02, 0.02 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fade Out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BeachBall_Animation:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.02, 0.02 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BeachBall_Animation:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.02, 0.02 ) ]
}

[node name="BeachBall" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 2 )

[node name="BeachBall_Animation" type="Sprite" parent="."]
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="."]
scale = Vector2( 2, 2 )
collision_mask = 2

[node name="AreaofDetection" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0, -0.1 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 5 )

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="Fade_Animation" type="AnimationPlayer" parent="."]
"anims/Fade In" = SubResource( 4 )
"anims/Fade Out" = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
